* Added new samples to index.

--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -28,6 +28,7 @@
     <li><a href="../demo14/timers.html">Timers</a></li>
     <li><a href="../demo15/logofrenzy.html">SpriteImage</a></li>
     <li><a href="../demo16/mask.html">Masking</a></li>
+    <li><a href="../demo17/video.html">Video Tag</a></li>
 </ul>
        
 <h1>Tutorial</h1>
