--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -40,6 +40,7 @@
     <li><a href="demo14/timers.html">Timers</a></li>
     <li><a href="demo15/logofrenzy.html">SpriteImage</a></li>
     <li><a href="demo16/mask.html">Masking</a></li>
+    <li><a href="demo17/video.html">Video</a></li>
 </ul>
 
 </body>
