--- a/documentation/demos/demo11/circles.html
+++ b/documentation/demos/demo11/circles.html
@@ -39,6 +39,7 @@
                 <h1>Packed Circle Collision Detection </h1>
             </div>
             <div id="experiment-holder">
+                <iframe style="width: 820px; height: 570px" src="http://jsfiddle.net/hyperandroid/jBFvG/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
             </div>
             <div id="experiment-description">
                 <div>
@@ -64,61 +65,6 @@
 </body>
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script type="text/javascript" src="../../../build/caat.js"></script>
-<script type="text/javascript" src="../templates/startup-wo-splash/template.js"></script>
-<script type="text/javascript" src="circles.js"></script>
-
-<script type="text/javascript">
-    /**
-     * @license
-     *
-     * The MIT License
-     * Copyright (c) 2010-2011 Ibon Tolosana, Hyperandroid || http://labs.hyperandroid.com/
-
-     * Permission is hereby granted, free of charge, to any person obtaining a copy
-     * of this software and associated documentation files (the "Software"), to deal
-     * in the Software without restriction, including without limitation the rights
-     * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-     * copies of the Software, and to permit persons to whom the Software is
-     * furnished to do so, subject to the following conditions:
-
-     * The above copyright notice and this permission notice shall be included in
-     * all copies or substantial portions of the Software.
-
-     * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-     * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-     * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-     * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-     * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-     * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-     * THE SOFTWARE.
-     *
-     */
-    (function() {
-        /**
-         * Startup it all up when the document is ready.
-         * Change for your favorite frameworks initialization code.
-         */
-        window.addEventListener(
-                'load',
-                function() {
-                    CAAT.modules.initialization.init(
-                            800, 500,
-                            'experiment-holder',
-                            [],                   // no-images
-                            __scene1
-                            );
-                },
-                false);
-
-        function __scene1(director) {
-            __scene10(director);
-        }
-
-    })();
-
-
-</script>
 
 
 </html>
