--- a/documentation/demos/demo15/logofrenzy.html
+++ b/documentation/demos/demo15/logofrenzy.html
@@ -39,6 +39,7 @@
                 <h1>SpriteImage</h1>
             </div>
             <div id="experiment-holder">
+                <iframe style="width: 820px; height: 570px" src="http://jsfiddle.net/hyperandroid/uQJM9/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
             </div>
             <div id="experiment-description">
                 <div>
@@ -59,142 +60,7 @@
 </body>
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script type="text/javascript" src="../../../build/caat.js"></script>
-<script type="text/javascript" src="../templates/startup-wo-splash/template.js"></script>
 
-<script type="text/javascript">
-    /**
-     * @license
-     *
-     * The MIT License
-     * Copyright (c) 2010-2011 Ibon Tolosana, Hyperandroid || http://labs.hyperandroid.com/
-
-     * Permission is hereby granted, free of charge, to any person obtaining a copy
-     * of this software and associated documentation files (the "Software"), to deal
-     * in the Software without restriction, including without limitation the rights
-     * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-     * copies of the Software, and to permit persons to whom the Software is
-     * furnished to do so, subject to the following conditions:
-
-     * The above copyright notice and this permission notice shall be included in
-     * all copies or substantial portions of the Software.
-
-     * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-     * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-     * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-     * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-     * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-     * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-     * THE SOFTWARE.
-     *
-     */
-    (function() {
-        /**
-         * Startup it all up when the document is ready.
-         * Change for your favorite frameworks initialization code.
-         */
-        window.addEventListener(
-                'load',
-                function() {
-                    CAAT.modules.initialization.init(
-                            800, 500,
-                            'experiment-holder',
-                            [
-                                {id: 'logo', url: '../demo-resources/img/logo.png'}
-                            ],
-                            __scene1
-                            );
-                },
-                false);
-
-
-        function __scene1(director) {
-            var slide= director.createScene();
-            slide.setFillStyle('eee');
-
-            var rows= 4;
-            var columns= 16;
-
-            var logo_ci= new CAAT.SpriteImage().initialize(
-                director.getImage('logo'), rows, columns
-            );
-
-            var i,j;
-            var xoff= (slide.width-logo_ci.width)/2;
-            var yoff= (slide.height-logo_ci.height)/2;
-
-            for( i=0; i<rows; i++ ) {
-                for( j=0; j<columns; j++ ) {
-                    var actor= new CAAT.Actor().
-                        setBackgroundImage( logo_ci.getRef(), true ).
-                        setSpriteIndex( j + i * columns ).
-                        setLocation(-100,-100);
-
-                    var bc= new CAAT.ContainerBehavior().
-                                setFrameTime(0, 23000).
-                                setCycle( true );
-
-
-                    var b1=new CAAT.PathBehavior().
-                                setFrameTime( Math.random()*2000, 5000+Math.random()*2000 ).
-                                setValues(
-                                    new CAAT.Path().
-                                        setCubic(
-                                            Math.random()<.5 ? slide.width+Math.random() * 50 : -50-Math.random()*slide.width,
-                                            Math.random()<.5 ? slide.width+Math.random() * 50 : -50-Math.random()*slide.height,
-                                            (Math.random()<.5 ?1 :-1) * Math.random() * slide.width,
-                                            (Math.random()<.5 ?1 :-1) * Math.random() * slide.height,
-                                            (Math.random()<.5 ?1 :-1) * Math.random() * slide.width,
-                                            (Math.random()<.5 ?1 :-1) * Math.random() * slide.height,
-                                            xoff + j * logo_ci.singleWidth,
-                                            yoff + i * logo_ci.singleHeight
-                                        )
-                                ).
-                                addListener({
-                                    behaviorExpired : function(behavior, time, actor) {
-                                        behavior.path.pathSegments[0].curve.coordlist[0].set(
-                                            Math.random()<.5 ? slide.width+Math.random() * 50 : -20-Math.random()*slide.width,
-                                            Math.random()<.5 ? slide.width+Math.random() * 50 : -20-Math.random()*slide.height
-                                        )
-                                    }
-                                });
-                    var b2= new CAAT.PathBehavior().
-                                setFrameTime( 15000+Math.random()*2000, 5000 ).
-                                setValues(
-                                    new CAAT.Path().
-                                        setCubic(
-                                            xoff + j * logo_ci.singleWidth,
-                                            yoff + i * logo_ci.singleHeight,
-                                            (Math.random()<.5 ?1 :-1) * Math.random() * slide.width,
-                                            (Math.random()<.5 ?1 :-1) * Math.random() * slide.height,
-                                            (Math.random()<.5 ?1 :-1) * Math.random() * slide.width,
-                                            (Math.random()<.5 ?1 :-1) * Math.random() * slide.height,
-                                            Math.random()<.5 ? slide.width+Math.random() * 50 : -20-Math.random()*slide.width,
-                                            Math.random()<.5 ? slide.width+Math.random() * 50 : -20-Math.random()*slide.height
-                                        )
-                                ).
-                                addListener({
-                                    behaviorExpired : function(behavior, time, actor) {
-                                        behavior.path.pathSegments[0].curve.coordlist[3].set(
-                                            Math.random()<.5 ? slide.width+Math.random() * 50 : -20-Math.random()*slide.width,
-                                            Math.random()<.5 ? slide.width+Math.random() * 50 : -20-Math.random()*slide.height
-                                        )
-                                    }
-                                });
-
-                    bc.addBehavior(b1);
-                    bc.addBehavior(b2);
-
-                    actor.addBehavior( bc );
-                    slide.addChild( actor );
-                }
-            }
-        }
-
-    })();
-
-
-</script>
 
 
 </html>
