--- a/documentation/demos/demo2/fishpond.html
+++ b/documentation/demos/demo2/fishpond.html
@@ -38,6 +38,7 @@
                 <h1>Procedural Fish Pond</h1>
             </div>
             <div id="experiment-holder">
+                <iframe style="width: 820px; height: 570px" src="http://jsfiddle.net/hyperandroid/DzhYv/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
             </div>
             <div id="experiment-description">
                 <div>
@@ -60,136 +61,6 @@
 </body>
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script type="text/javascript" src="../../../build/caat.js"></script>
-<script type="text/javascript" src="../templates/startup-wo-splash/template.js"></script>
-<script type="text/javascript" src="fish.js"></script>
-<script type="text/javascript">
-    /**
-     * @license
-     *
-     * The MIT License
-     * Copyright (c) 2010-2011 Ibon Tolosana, Hyperandroid || http://labs.hyperandroid.com/
 
-     * Permission is hereby granted, free of charge, to any person obtaining a copy
-     * of this software and associated documentation files (the "Software"), to deal
-     * in the Software without restriction, including without limitation the rights
-     * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-     * copies of the Software, and to permit persons to whom the Software is
-     * furnished to do so, subject to the following conditions:
-
-     * The above copyright notice and this permission notice shall be included in
-     * all copies or substantial portions of the Software.
-
-     * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-     * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-     * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-     * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-     * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-     * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-     * THE SOFTWARE.
-     *
-     */
-
-    (function() {
-        /**
-         * Startup it all up when the document is ready.
-         * Change for your favorite frameworks initialization code.
-         */
-        window.addEventListener(
-                'load',
-                function() {
-                    CAAT.modules.initialization.init(
-                            800, 500,
-                            'experiment-holder',
-                            [],
-                            __fishpond
-                            );
-                },
-                false);
-
-
-        function __fishpond(director) {
-
-            var scene= director.createScene();
-
-            // when the scene is activated, avoid the director clearing the viewport since it'll be
-            // totally erased by the background.
-            scene.activated= function() {
-                director.setClear(false);
-            }
-            var NP=20;
-            var colors= ['red', 'blue', 'white', 'rgb(0,255,255)', 'yellow'];
-            var gradient= director.crc.createLinearGradient(0,0,director.width,director.height);
-            gradient.addColorStop(0,'#000000');
-            gradient.addColorStop(1,'#00007f');
-
-            var gr= new CAAT.ActorContainer().
-                    setBounds(0,0,director.width,director.height).
-                    setFillStyle(gradient).
-                    enableEvents(false).
-                    cacheAsBitmap();
-
-            for( var i=0; i<NP; i++ ) {
-
-                var fw= (100 + Math.random()*40*(Math.random()<.5?1:-1))>>0;
-                var fh= (20+ Math.random()*5*(Math.random()<.5?1:-1))>>0;
-
-                var inTime= i*1000;
-
-                var pb = new CAAT.PathBehavior().
-                        setPath(new CAAT.Path().setCubic(
-                        -fw - Math.random() * 300,
-                        Math.random() * director.height,
-
-                        director.width * Math.random(),
-                        Math.random() * director.height,
-
-                        director.width * Math.random(),
-                        Math.random() * director.height,
-
-                        Math.random() < .5 ? director.width + fw + Math.random() * 150 : Math.random() * director.width,
-                        Math.random() < .5 ? -director.height * Math.random() - 300 : director.height + Math.random() * director.height
-                        )).
-                        setFrameTime(scene.time + inTime, (20000 + 5000 * Math.random()) >> 0).
-                        setCycle(true).
-                        setAutoRotate(true).
-                        addListener({
-                                behaviorExpired : function(behavior, time, actor) {
-                                    behavior.path.setCubic(
-                                            -fw - Math.random() * 300,
-                                            Math.random() * director.height,
-
-                                            director.width * Math.random(),
-                                            -Math.random() * director.height / 2 + Math.random() * director.height,
-
-                                            director.width * Math.random(),
-                                            -Math.random() * director.height / 2 + Math.random() * director.height,
-
-                                            Math.random() < .5 ? director.width + fw + Math.random() * 150 : Math.random() * director.width,
-                                            Math.random() < .5 ? -director.height * Math.random() - 300 : director.height + Math.random() * director.height
-                                            );
-                                    behavior.setFrameTime(scene.time, (20000 + 5000 * Math.random()) >> 0);
-                                    actor.born();
-                                },
-                                behaviorApplied : function(actor, time, normalizedTime, value) {
-
-                                }
-                            });
-
-                var f= new CAAT.Fish().
-                        setBounds(300,400,fw,fh).
-                        born().
-                        setFrameTime( scene.time+inTime, Number.MAX_VALUE ).
-                        setBodyColor(colors[i%colors.length]);
-
-                f.addBehavior(pb);
-                gr.addChild(f);
-            }
-
-            scene.addChild(gr);
-
-        }
-
-    })();
 </script>
 </html>
