--- a/documentation/demos/demo3/sprites.html
+++ b/documentation/demos/demo3/sprites.html
@@ -39,6 +39,7 @@
                     <h1>Sprites on Path</h1>
                 </div>
                 <div id="experiment-holder">
+                    <iframe style="width: 820px; height: 570px" src="http://jsfiddle.net/hyperandroid/5G3DW/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
                 </div>
                 <div id="experiment-description">
                     <div>
@@ -69,145 +70,5 @@
 </body>
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script type="text/javascript" src="../../../build/caat.js"></script>
-<script type="text/javascript" src="../templates/startup-wo-splash/template.js"></script>
-<script type="text/javascript">
-    /**
-     * @license
-     *
-     * The MIT License
-     * Copyright (c) 2010-2011 Ibon Tolosana, Hyperandroid || http://labs.hyperandroid.com/
 
-     * Permission is hereby granted, free of charge, to any person obtaining a copy
-     * of this software and associated documentation files (the "Software"), to deal
-     * in the Software without restriction, including without limitation the rights
-     * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-     * copies of the Software, and to permit persons to whom the Software is
-     * furnished to do so, subject to the following conditions:
-
-     * The above copyright notice and this permission notice shall be included in
-     * all copies or substantial portions of the Software.
-
-     * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-     * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-     * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-     * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-     * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-     * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-     * THE SOFTWARE.
-     *
-     */
-
-    (function() {
-        /**
-         * Startup it all up when the document is ready.
-         * Change for your favorite frameworks initialization code.
-         */
-        window.addEventListener(
-                'load',
-                function() {
-                    CAAT.modules.initialization.init(
-                            800, 500,
-                            'experiment-holder',
-                            [
-                                {id:'fish',     url:'../demo-resources/img/anim1.png'},
-                                {id:'fish2',    url:'../demo-resources/img/anim2.png'},
-                                {id:'fish3',    url:'../demo-resources/img/anim3.png'},
-                                {id:'fish4',    url:'../demo-resources/img/anim4.png'}
-                            ],
-                            sprites
-                            );
-                },
-                false);
-
-        function sprites(director) {
-
-            var scene= director.createScene();
-            // when the scene is activated, avoid the director clearing the viewport since it'll be
-            // totally erased by the background.
-            scene.activated= function() {
-                director.setClear(false);
-            }
-
-            var imageIndex=0;
-            var conpoundimagefish = [];
-            conpoundimagefish.push(
-                    new CAAT.SpriteImage().initialize(
-                            director.getImage('fish'),  1, 3) );
-            conpoundimagefish.push(
-                    new CAAT.SpriteImage().initialize(
-                            director.getImage('fish2'), 1, 3) );
-            conpoundimagefish.push(
-                    new CAAT.SpriteImage().initialize(
-                            director.getImage('fish3'), 1, 3) );
-            conpoundimagefish.push(
-                    new CAAT.SpriteImage().initialize(
-                            director.getImage('fish4'), 1, 3) );
-
-            function addFish(x,y) {
-
-                var scale= Math.random() + .5;
-
-                var fish = new CAAT.Actor().
-                        setBackgroundImage(
-                                conpoundimagefish[(imageIndex++)%conpoundimagefish.length].getRef(),
-                                true).
-                        setLocation( x,y ).
-                        setScale( scale,scale ).
-                        setAnimationImageIndex( [0,1,2,1] ).
-                        setChangeFPS(300).
-                        enableEvents(false);
-
-                scene.addChild(fish);
-
-                var pbfish= new CAAT.PathBehavior().
-                        setAutoRotate(true, CAAT.PathBehavior.autorotate.LEFT_TO_RIGHT).
-                        setPath(
-                            new CAAT.Path().setLinear( x,y, x,y ) ).
-                        setInterpolator(
-                            new CAAT.Interpolator().createExponentialInOutInterpolator(2,false) ).
-                        setFrameTime( scene.time, 10 ).
-                        addListener( {
-                            behaviorExpired : function(behaviour,time) {
-                                var endCoord= behaviour.path.endCurvePosition();
-                                behaviour.setPath(
-                                        new CAAT.Path().setCubic(
-                                            endCoord.x,
-                                            endCoord.y,
-                                            Math.random()*director.width,
-                                            Math.random()*director.height,
-                                            Math.random()*director.width,
-                                            Math.random()*director.height,
-                                            Math.random()*director.width,
-                                            Math.random()*director.height) );
-                                behaviour.setFrameTime( scene.time, 3000+Math.random()*3000 );
-                            }
-                        });
-
-                fish.addBehavior( pbfish );
-            }
-
-            var gradient= director.ctx.createLinearGradient(0,0,director.width,director.height);
-            gradient.addColorStop(0,'#000000');
-            gradient.addColorStop(1,'#00007f');
-
-            var gr= new CAAT.ActorContainer().
-                    setBounds(0,0,director.width,director.height).
-                    setFillStyle(gradient).
-                    enableEvents(false).
-                    cacheAsBitmap();
-
-            scene.addChild(gr);
-
-            gr.enableEvents(true);
-            gr.mouseClick= function(ev) {
-                addFish(ev.point.x,ev.point.y);
-            };
-
-            addFish(100,100);
-        }
-
-
-    })();
-</script>
 </html>
