--- a/documentation/tutorials/t0.html
+++ b/documentation/tutorials/t0.html
@@ -116,9 +116,9 @@
                         <li class="indented"><a href="t9-1.html">ShapeActor</a>
                         <li class="indented"><a href="t9-2.html">StarActor</a>
                         <li class="indented"><a href="t9-3.html">TextActor</a>
-                        <li class="indented"><a href="t9-4.html">ImageActor</a>
-                        <li class="indented"><a href="t9-5.html">SpriteActor</a>
-                        <li class="indented"><a href="t9-6.html">Button</a>
+                        <li class="indented"><a href="t9-4.html">ImageActor (deprecated)</a>
+                        <li class="indented"><a href="t9-5.html">SpriteActor (deprecated)</a>
+                        <li class="indented"><a href="t9-6.html">Button (deprecated)</a>
                         <li class="indented"><a href="t9-7.html">InterpolatorActor</a>
                         <li class="indented"><a href="t9-8.html">PathActor</a>
                         <li class="indented"><a href="t9-9.html">Dock</a>
