--- a/documentation/tutorials/t9-6.html
+++ b/documentation/tutorials/t9-6.html
@@ -59,10 +59,8 @@
 
             <div>
                 <p>
-                    This actor objects' functionalities are already available at any <span class="apicode">
-                    CAAT.Actor</span> which is the preferred way of setting up actors with images.
-                    To set an actor behave like a button, call the method <span class="apicode">
-                    setAsButton()</span>.
+                    <span class="apicode"><b>This actor object's been deprecated and it functionalities are already available in CAAt.Actor via
+                    the method <span class="apicode">setAsButton()</span></b></span>.
                 </p>
 
                 <p>
