--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_path_pathactor.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_path_pathactor.js.html
@@ -68,7 +68,7 @@
 <span class='line'> 61</span> </span><span class="WHIT">        </span><span class="COMM">/**
 <span class='line'> 62</span>          * Enables/disables drawing of the contained path's bounding box.
 <span class='line'> 63</span>          * @param show {boolean} whether to show the bounding box
-<span class='line'> 64</span>          * @param color {*string} optional parameter defining the path's bounding box stroke style.
+<span class='line'> 64</span>          * @param color {=string} optional parameter defining the path's bounding box stroke style.
 <span class='line'> 65</span>          */</span><span class="WHIT">
 <span class='line'> 66</span> </span><span class="WHIT">        </span><span class="NAME">showBoundingBox</span><span class="WHIT"> </span><span class="PUNC">:</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="NAME">show</span><span class="PUNC">,</span><span class="WHIT"> </span><span class="NAME">color</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
 <span class='line'> 67</span> </span><span class="WHIT">            </span><span class="NAME">this.bOutline</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">show</span><span class="PUNC">;</span><span class="WHIT">
