--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_actor.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_actor.js.html
@@ -1130,9 +1130,9 @@
 <span class='line'>1123</span>                 If we have a mask applied, apply behaviors as well.
 <span class='line'>1124</span>              */</span><span class="WHIT">
 <span class='line'>1125</span> </span><span class="WHIT">            </span><span class="KEYW">if</span><span class="WHIT"> </span><span class="PUNC">(</span><span class="WHIT"> </span><span class="NAME">this.clipPath</span><span class="WHIT"> </span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
-<span class='line'>1126</span> </span><span class="WHIT">                </span><span class="KEYW">if</span><span class="WHIT"> </span><span class="PUNC">(</span><span class="WHIT"> </span><span class="NAME">this.clipPath.applyBehaviors</span><span class="WHIT"> </span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
+<span class='line'>1126</span> </span><span class="COMM">//                if ( this.clipPath.applyBehaviors ) {</span><span class="WHIT">
 <span class='line'>1127</span> </span><span class="WHIT">                    </span><span class="NAME">this.clipPath.applyBehaviors</span><span class="PUNC">(</span><span class="NAME">time</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
-<span class='line'>1128</span> </span><span class="WHIT">                </span><span class="PUNC">}</span><span class="WHIT">
+<span class='line'>1128</span> </span><span class="COMM">//                }</span><span class="WHIT">
 <span class='line'>1129</span> </span><span class="WHIT">            </span><span class="PUNC">}</span><span class="WHIT">
 <span class='line'>1130</span> 
 <span class='line'>1131</span> </span><span class="WHIT">            </span><span class="COMM">// transformation stuff.</span><span class="WHIT">
