* Added method CAAT.setCoordinateClamping( bool ) which controls the to-integer coordinate clamping procedure. This   speeds things up on mobile. A call to this method must be performed previously to creating any CAAT.Matrix object,   begin the beginning of your application the suitable place. * Added current scene time to mouseEvent.

--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_conpoundimage.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_conpoundimage.js.html
@@ -170,7 +170,7 @@
 <span class='line'>163</span>          * @return this
 <span class='line'>164</span>          */</span><span class="WHIT">
 <span class='line'>165</span> </span><span class="WHIT">        </span><span class="NAME">setOffsetX</span><span class="WHIT"> </span><span class="PUNC">:</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="NAME">x</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
-<span class='line'>166</span> </span><span class="WHIT">            </span><span class="NAME">this.offsetX</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">x</span><span class="PUNC">|</span><span class="NUMB">0</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'>166</span> </span><span class="WHIT">            </span><span class="NAME">this.offsetX</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">x</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>167</span> </span><span class="WHIT">            </span><span class="KEYW">return</span><span class="WHIT"> </span><span class="KEYW">this</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>168</span> </span><span class="WHIT">        </span><span class="PUNC">}</span><span class="PUNC">,</span><span class="WHIT">
 <span class='line'>169</span> </span><span class="WHIT">        </span><span class="COMM">/**
@@ -180,7 +180,7 @@
 <span class='line'>173</span>          * @return this
 <span class='line'>174</span>          */</span><span class="WHIT">
 <span class='line'>175</span> </span><span class="WHIT">        </span><span class="NAME">setOffsetY</span><span class="WHIT"> </span><span class="PUNC">:</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="NAME">y</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
-<span class='line'>176</span> </span><span class="WHIT">            </span><span class="NAME">this.offsetY</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">y</span><span class="PUNC">|</span><span class="NUMB">0</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'>176</span> </span><span class="WHIT">            </span><span class="NAME">this.offsetY</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">y</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>177</span> </span><span class="WHIT">            </span><span class="KEYW">return</span><span class="WHIT"> </span><span class="KEYW">this</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>178</span> </span><span class="WHIT">        </span><span class="PUNC">}</span><span class="PUNC">,</span><span class="WHIT">
 <span class='line'>179</span> </span><span class="WHIT">        </span><span class="NAME">setOffset</span><span class="WHIT"> </span><span class="PUNC">:</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="WHIT"> </span><span class="NAME">x</span><span class="PUNC">,</span><span class="NAME">y</span><span class="WHIT"> </span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
