--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_mouseevent.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_mouseevent.js.html
@@ -455,8 +455,8 @@
 <span class='line'>448</span> </span><span class="WHIT">    </span><span class="PUNC">}</span><span class="WHIT">
 <span class='line'>449</span> </span><span class="PUNC">}</span><span class="WHIT">
 <span class='line'>450</span> 
-<span class='line'>451</span> 
-<span class='line'>452</span> </span><span class="NAME">CAAT.RAF</span><span class="PUNC">=</span><span class="WHIT">                       </span><span class="NUMB">0</span><span class="PUNC">;</span><span class="WHIT">    </span><span class="COMM">// requestAnimationFrame time reference.</span><span class="WHIT">
+<span class='line'>451</span> </span><span class="NAME">CAAT.FPS_REFRESH</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NUMB">500</span><span class="PUNC">;</span><span class="WHIT">  </span><span class="COMM">// debug panel update time.</span><span class="WHIT">
+<span class='line'>452</span> </span><span class="NAME">CAAT.RAF</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NUMB">0</span><span class="PUNC">;</span><span class="WHIT">            </span><span class="COMM">// requestAnimationFrame time reference.</span><span class="WHIT">
 <span class='line'>453</span> </span><span class="NAME">CAAT.REQUEST_ANIMATION_FRAME_TIME</span><span class="PUNC">=</span><span class="WHIT">   </span><span class="NUMB">0</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>454</span> </span><span class="COMM">/**
 <span class='line'>455</span>  * Make a frame for each director instance present in the system.
