--- a/documentation/demos/demo4/coordinates.html
+++ b/documentation/demos/demo4/coordinates.html
@@ -51,6 +51,7 @@
                         <li>Shift+Drag to scale actors.</li>
                         <li>Control+Drag to rotate actors.</li>
                         <li>Shift+Alt to unevenly scale actors.</li>
+                        <li>Pinch, rotate and drag on iOS with native gestures.</li>
                     </ul>
                 </div>
                 <div>
